deployments/overlays/staging/change_speedtest_pod_label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: speedtest-pod
  labels:
    name: staging-speedtest-pod
