deployments/overlays/staging/increase_replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openspeedtest
spec:
  replicas: 1
