deployments/overlays/staging/ollama_add_gpu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-deployment
spec:
  template:
    spec:
      containers:
        - name: ollama
          # using the rocm image
          image: ollama/ollama:0.1.36-rocm
          # adding support for rx 6700 xt
          resources:
            limits:
              amd.com/gpu: 1 # requesting a GPU
