deployments/overlays/staging/change_speedtest_service_selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-service
spec:
  selector:
    name: staging-speedtest-pod
