deployments/overlays/staging/change_speedtest_domain.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest-tls
spec:
  rules:
    - host: beta.speed.nilsherzig.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedtest-service
                port: # TODO why do i need to overwrite this, it doesnt change
                  number: 80
  tls:
    - hosts:
        - beta.speed.nilsherzig.com
      secretName: beta-tls-speed-cert
